testsuite/tests/semantic_errors/call_function_as_procedure/test.out
Analyzing test.adb
##################

Resolving xrefs for node <CallStmt test.adb:4:4-4:12>
*****************************************************

test.adb:4:4: error: resolution failed
4 |    Foo (2);
  |    ^^^^^^^^



Done.
